[gd_scene load_steps=6 format=3 uid="uid://b7eeo37r0hsa5"]

[ext_resource type="PackedScene" uid="uid://bfklob58ogw14" path="res://scenes/player/player.tscn" id="1_ty1gb"]
[ext_resource type="Script" path="res://scenes/levels/level_controller.gd" id="1_uvjbv"]
[ext_resource type="PackedScene" uid="uid://cyr6ndvweuq10" path="res://scenes/backgrounds/parallax.tscn" id="2_wangi"]
[ext_resource type="PackedScene" uid="uid://b7ug7b0trm8tc" path="res://scenes/ui/hud/hud.tscn" id="4_fuumm"]
[ext_resource type="PackedScene" uid="uid://d304dd6frdjxf" path="res://scenes/systems/enemy_spawn_system/enemy_spawn_system.tscn" id="6_4bxta"]

[node name="Level1" type="Node"]
script = ExtResource("1_uvjbv")

[node name="Parallax" parent="." instance=ExtResource("2_wangi")]

[node name="Player" parent="." instance=ExtResource("1_ty1gb")]
position = Vector2(577, 540)

[node name="Hud" parent="." node_paths=PackedStringArray("player") instance=ExtResource("4_fuumm")]
player = NodePath("../Player")

[node name="Intro" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Countdown" type="Timer" parent="."]
wait_time = 20.0

[node name="EnemySpawnSystem" parent="." instance=ExtResource("6_4bxta")]

[connection signal="ammo_changed" from="Player" to="Hud" method="_update_ammo"]
[connection signal="timeout" from="Intro" to="." method="_on_intro_timeout"]
[connection signal="timeout" from="Countdown" to="." method="_on_countdown_timeout"]
